--- a/koha-tmpl/intranet-tmpl/prog/en/modules/reports/bor_issues_top.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/modules/reports/bor_issues_top.tmpl
@@ -1,5 +1,5 @@
 <!-- TMPL_INCLUDE NAME="doc-head-open.inc" -->
-<title>Koha &rsaquo; Reports</title>
+<title>Koha &rsaquo; Reports &rsaquo; Patrons with the most Checkouts</title>
 <!-- TMPL_INCLUDE NAME="doc-head-close.inc" -->
 <!-- Additions to enable Calendar system -->
 <link rel="stylesheet" type="text/css" href="<!-- TMPL_VAR name="themelang" -->/lib/calendar/calendar-system.css" />
@@ -11,15 +11,15 @@
 </head>
 <body>
 <!-- TMPL_INCLUDE NAME="header.inc" -->
+<!-- TMPL_INCLUDE NAME="cat-search.inc" -->
 
-<!-- TMPL_INCLUDE NAME="menu-reports.inc"-->
-
+<div id="breadcrumbs"><a href="/cgi-bin/koha/mainpage.pl">Home</a> &rsaquo; <a href="/cgi-bin/koha/reports/reports-home.pl">Reports</a> &rsaquo; Patrons with the most Checkouts</div>
 
 <div id="doc3" class="yui-t2">
    
    <div id="bd">
 	<div id="yui-main">
-	<div class="yui-b"><div class="yui-g">
+	<div class="yui-b">
 
 <!-- TMPL_IF NAME="do_it" -->
 <script language="JavaScript" type="text/javascript">
@@ -72,7 +72,7 @@ function Dopop(link) {
 	<!-- /TMPL_LOOP -->
 <!-- TMPL_ELSE -->
 	<h1>Patrons who checked out the most items</h1>
-	<form method="post">
+	<form method="post" action="/cgi-bin/koha/reports/bor_issues_top.pl">
 	
 	<table>
 		<thead>
@@ -108,14 +108,14 @@ function Dopop(link) {
 						<option value ="Year">Year</option>
 					</select>
 				</td>
+				<td colspan="2">&nbsp;</td>
 			</tr>
 			
 			<tr class="hilighted">
-				<td>&nbsp;</td>
-				<td>&nbsp;</td>
+				<td colspan="2">&nbsp;</td>
 				<td>Issue date</td>
-				<td> From <input type="text" readonly="readonly" size="10" id="from" name="Filter" />
-							<img src="<!-- TMPL_VAR Name="themelang" -->/lib/calendar/cal.gif" border="0" id="openCalendarFrom" style="cursor: pointer;" valign="top" />
+				<td> <label for="from">From</label> <input type="text" readonly="readonly" size="10" id="from" name="Filter" />
+							<img src="<!-- TMPL_VAR Name="themelang" -->/lib/calendar/cal.gif" alt="Show Calendar" border="0" id="openCalendarFrom" style="cursor: pointer;" />
 								<script language="JavaScript" type="text/javascript">
 									function validate1(date) {
 										var day = date.getDate();
@@ -143,8 +143,8 @@ function Dopop(link) {
 										}
 									);
 								</script>
-					To <input readonly="readonly" size="10" id="to" name="Filter" value="" type="text" />
-						<img src="<!-- TMPL_VAR Name="themelang" -->/lib/calendar/cal.gif" id="openCalendarTo" style="cursor: pointer;" alt="" border="0" />
+					<label for="to">To</label> <input readonly="readonly" size="10" id="to" name="Filter" value="" type="text" />
+						<img src="<!-- TMPL_VAR Name="themelang" -->/lib/calendar/cal.gif" alt="Show Calendar" id="openCalendarTo" style="cursor: pointer;" border="0" />
 							<script type="text/javascript">
 								function validate2(date) {
 									var day = date.getDate();
@@ -175,11 +175,10 @@ function Dopop(link) {
 				</td>
 			</tr>
 			<tr>
-				<td> &nbsp;</td>
-				<td> &nbsp;</td>
+				<td colspan="2">&nbsp;</td>
 				<td>Returns</td>
-				<td > From <input type="text" readonly="readonly" size="10" id="fromRO" name="Filter" />
-							<img src="<!-- TMPL_VAR Name="themelang" -->/lib/calendar/cal.gif" border="0" id="openCalendarFromRO" style="cursor: pointer;" alt="" />
+				<td > <label for="fromRO">From</label> <input type="text" readonly="readonly" size="10" id="fromRO" name="Filter" />
+							<img src="<!-- TMPL_VAR Name="themelang" -->/lib/calendar/cal.gif" border="0" id="openCalendarFromRO" style="cursor: pointer;" alt="Show Calendar" />
 								<script language="JavaScript" type="text/javascript">
 									function validate1(date) {
 										var day = date.getDate();
@@ -207,8 +206,8 @@ function Dopop(link) {
 										}
 									);
 								</script>
-					To <input type="text" readonly="readonly" size="10" id="toRO" name="Filter" value="" />
-						<img src="<!-- TMPL_VAR Name="themelang" -->/lib/calendar/cal.gif" id="openCalendarToRO" style="cursor: pointer;" alt="" border="0" />
+					<label for="toRO">To</label> <input type="text" readonly="readonly" size="10" id="toRO" name="Filter" value="" />
+						<img src="<!-- TMPL_VAR Name="themelang" -->/lib/calendar/cal.gif" id="openCalendarToRO" style="cursor: pointer;" alt="Show Calendar" border="0" />
 							<script type="text/javascript">
 								function validate2(date) {
 									var day = date.getDate();
@@ -239,60 +238,56 @@ function Dopop(link) {
 				</td>
 			</tr>
 			<tr class="hilighted">
-				<td>&nbsp;</td>
-				<td>&nbsp;</td>
-				<td>Branch</td>
-				<td><input type="text" name="Filter" value="" /></td>
+				<td colspan="2">&nbsp;</td>
+				<td><label for="branch">Branch</label></td>
+				<td><input type="text" name="Filter" id="branch" value="" /></td>
 			</tr>
 			<tr>
-				<td>&nbsp;</td>
-				<td>&nbsp;</td>
-				<td>Document Type</td>
-				<td><input type="text" name="Filter" value="" /></td>
+				<td colspan="2">&nbsp;</td>
+				<td><label for="documenttype">Document Type</label></td>
+				<td><input type="text" name="Filter" id="documenttype" value="" /></td>
 			</tr>
 			<tr class="hilighted">
-				<td>&nbsp;</td>
-				<td>&nbsp;</td>
-				<td>Patron Category</td>
-				<td><input type="text" name="Filter" value="" /></td>
+				<td colspan="2">&nbsp;</td>
+				<td><label for="patroncategory">Patron Category</label></td>
+				<td><input type="text" name="Filter" id="patroncategory" value="" /></td>
 			</tr>
 			<tr>
-				<td>&nbsp;</td>
-				<td>&nbsp;</td>
-				<td>Day</td>
-				<td><input type="text" name="Filter" value="" /></td>
+				<td colspan="2">&nbsp;</td>
+				<td><label for="day">Day</label></td>
+				<td><input type="text" name="Filter" id="day" value="" /></td>
 			</tr>
 			<tr class="hilighted">
-				<td>&nbsp;</td>
-				<td>&nbsp;</td>
-				<td>Month</td>
-				<td><input type="text" name="Filter" value="" /></td>
+				<td colspan="2">&nbsp;</td>
+				<td><label for="month">Month</label></td>
+				<td><input type="text" name="Filter" id="month" value="" /></td>
 			</tr>
 			<tr>
-				<td>&nbsp;</td>
-				<td>&nbsp;</td>
-				<td>Year</td>
-				<td><input type="text" name="Filter" value="" /></td>
+				<td colspan="2">&nbsp;</td>
+				<td><label for="year">Year</label></td>
+				<td><input type="text" name="Filter" id="year" value="" /></td>
 			</tr>
 		</tbody>
 	</table>
 	
 	
 		<h3> Output </h3>
-		<input type="radio" checked name="output" value="screen" /> To screen into the browser
+		<input type="radio" checked="checked" name="output" id="outputscreen" value="screen" /> <label for="outputscreen">To screen into the browser</label>
 		
-		<input type="radio" name="output" value="file" /> To file <input type="text" name="basename" value="Export" /> into an application  
+		<input type="radio" name="output" value="file" id="outputfile" /> <label for="outputfile">To file</label> <input type="text" name="basename" value="Export" /> into an application  
 		<!-- TMPL_VAR NAME="CGIextChoice" -->
 		<!-- TMPL_VAR NAME="CGIsepChoice" -->
 
-	<input type="submit" value="OK" />
+	<p><input type="submit" value="OK" />
 	<input type="hidden" name="report_name" value="<!--TMPL_VAR NAME="report_name" -->" />
-	<input type="hidden" name="do_it" value="1" />
+	<input type="hidden" name="do_it" value="1" /></p>
 	</form>
 <!-- /TMPL_IF -->
-</div>
-</div>
-</div>
 
-<!-- TMPL_INCLUDE NAME="mainmenu.inc" -->
+</div>
+</div>
+<div class="yui-b">
+<!-- TMPL_INCLUDE NAME="reports-menu.inc" -->
+</div>
+</div>
 <!-- TMPL_INCLUDE NAME="intranet-bottom.inc" -->
