--- a/koha-tmpl/intranet-tmpl/prog/en/modules/reports/borrowers_out.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/modules/reports/borrowers_out.tmpl
@@ -1,5 +1,5 @@
 <!-- TMPL_INCLUDE NAME="doc-head-open.inc" -->
-<title>Koha &rsaquo; Reports</title>
+<title>Koha &rsaquo; Reports &rsaquo; Patrons with No Checkouts</title>
 <!-- TMPL_INCLUDE NAME="doc-head-close.inc" -->
 <!-- Additions to enable Calendar system -->
 <link rel="stylesheet" type="text/css" href="<!-- TMPL_VAR name="themelang" -->/lib/calendar/calendar-system.css" />
@@ -10,17 +10,20 @@
 <!-- End of additions -->
 </head>
 <body>
-<!-- TMPL_INCLUDE NAME="header.inc" --><!-- TMPL_INCLUDE NAME="menu-reports.inc"-->
+<!-- TMPL_INCLUDE NAME="header.inc" -->
+<!-- TMPL_INCLUDE NAME="cat-search.inc" -->
+
+<div id="breadcrumbs"><a href="/cgi-bin/koha/mainpage.pl">Home</a> &rsaquo; <a href="/cgi-bin/koha/reports/reports-home.pl">Reports</a> &rsaquo; Patrons with No Checkouts</div>
 
 <div id="doc3" class="yui-t2">
    
    <div id="bd">
 	<div id="yui-main">
-	<div class="yui-b"><div class="yui-g">
+	<div class="yui-b">
 
 <!-- TMPL_IF NAME="do_it" -->
     <!-- TMPL_LOOP NAME="mainloop" -->
-        <h1>Patrons with No. Checkouts</h1>
+        <h1>Patrons with No Checkouts</h1>
         <!-- TMPL_IF NAME="loopfilter"-->
             <p>Filtered on</p>
             <!-- TMPL_LOOP NAME="loopfilter" -->
@@ -29,7 +32,7 @@
         <!-- /TMPL_IF-->
         
         <table>
-            <tr >
+            <tr>
                 <th>Num/Patrons</th>
                 <!-- TMPL_LOOP NAME="loopcol" -->
                     <th><!-- TMPL_VAR NAME="coltitle" --></th>
@@ -50,7 +53,7 @@
     <!-- /TMPL_LOOP -->
 <!-- TMPL_ELSE -->
     <h1>Patrons with no Checkouts</h1>
-    <form method="post">
+    <form method="post" action="/cgi-bin/koha/reports/borrowers_out.pl">
     
     <table>
         <thead>
@@ -64,7 +67,7 @@
             <tr>
                 <td>
                     <select name="Limit">
-                        <option value ="" checked="checked">None</option>
+                        <option value ="" selected="selected">None</option>
                         <option value ="5"> 5</option>
                         <option value ="10">10</option>
                         <option value ="15">15</option>
@@ -77,24 +80,23 @@
                 </td>
                 <td>
                     <select name="Criteria">
-                        <option value ="" checked="checked">None</option>
+                        <option value ="" selected="selected">None</option>
                         <option value ="categorycode">Categorycode</option>
                         <option value ="itemtype">Itemtype</option>
                     </select>
                 </td>
+				<td colspan="2">&nbsp;</td>
             </tr>
             <tr class="hilighted">
-                <td>&nbsp;</td>
-                <td>&nbsp;</td>
-                <td>Patron category</td>
-                <td><input type="text" name="Filter" value="" /></td>
+                <td colspan="2">&nbsp;</td>
+                <td><label for="patroncategory">Patron category</label></td>
+                <td><input type="text" name="Filter" id="patroncategory" value="" /></td>
             </tr>
             <tr class="hilighted">
-                <td>&nbsp;</td>
-                <td>&nbsp;</td>
-                <td>Without issues since</td>
+                <td colspan="2">&nbsp;</td>
+                <td><label for="to">Without issues since</label></td>
                 <td><input size="10" id="to" name="Filter" value="" type="text" />
-                        <img src="<!-- TMPL_VAR Name="themelang" -->/lib/calendar/cal.gif" id="openCalendarTo" style="cursor: pointer;" valign="top" border="0" hspace="0" vspace="0">
+                        <img src="<!-- TMPL_VAR Name="themelang" -->/lib/calendar/cal.gif" alt="Show Calendar" id="openCalendarTo" style="cursor: pointer;" border="0" />
                             <script type="text/javascript">
                                 Calendar.setup(
                                     {
@@ -110,22 +112,24 @@
     
     
         <h3> Output </h3>
-        <input type="radio" checked name="output" value="screen" /> To screen into the browser
-        
-        <input type="radio" name="output" value="file" /> To file <input type="text" name="basename" value="Export" /> into an application  
+        <input type="radio" checked="checked" name="output" id="outputscreen" value="screen" /> <label for="outputscreen">To screen into the browser</label>
+		
+		<input type="radio" name="output" value="file" id="outputfile" /> <label for="outputfile">To file</label> <input type="text" name="basename" value="Export" /> into an application  
         <!-- TMPL_VAR NAME="CGIextChoice" -->
         <!-- TMPL_VAR NAME="CGIsepChoice" -->
-    </p>
+    
     
     <p>
     <input type="submit" value="OK" />
     <input type="hidden" name="report_name" value="<!--TMPL_VAR NAME="report_name" -->" />
-    <input type="hidden" name="do_it" value="1" />
+    <input type="hidden" name="do_it" value="1" /></p>
     </form>
 <!-- /TMPL_IF -->
-</div>
-</div>
-</div>
 
-<!-- TMPL_INCLUDE NAME="mainmenu.inc" -->
+</div>
+</div>
+<div class="yui-b">
+<!-- TMPL_INCLUDE NAME="reports-menu.inc" -->
+</div>
+</div>
 <!-- TMPL_INCLUDE NAME="intranet-bottom.inc" -->
