--- a/koha-tmpl/intranet-tmpl/prog/en/modules/reports/borrowers_stats.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/modules/reports/borrowers_stats.tmpl
@@ -1,5 +1,5 @@
 <!-- TMPL_INCLUDE NAME="doc-head-open.inc" -->
-<title>Koha &rsaquo; Reports</title>
+<title>Koha &rsaquo; Reports &rsaquo; Patrons statistics</title>
 <!-- TMPL_INCLUDE NAME="doc-head-close.inc" -->
 <!-- Additions to enable Calendar system -->
 <link rel="stylesheet" type="text/css" href="<!-- TMPL_VAR name="themelang" -->/lib/calendar/calendar-system.css" />
@@ -10,13 +10,16 @@
 <!-- End of additions -->
 </head>
 <body>
-<!-- TMPL_INCLUDE NAME="header.inc" --><!-- TMPL_INCLUDE NAME="menu-reports.inc"-->
+<!-- TMPL_INCLUDE NAME="header.inc" -->
+<!-- TMPL_INCLUDE NAME="cat-search.inc" -->
+
+<div id="breadcrumbs"><a href="/cgi-bin/koha/mainpage.pl">Home</a> &rsaquo; <a href="/cgi-bin/koha/reports/reports-home.pl">Reports</a> &rsaquo; Patrons statistics</div>
 
 <div id="doc3" class="yui-t2">
    
    <div id="bd">
 	<div id="yui-main">
-	<div class="yui-b"><div class="yui-g">
+	<div class="yui-b">
 
 <!-- TMPL_IF NAME="do_it" -->
 	<!-- TMPL_LOOP NAME="mainloop" -->
@@ -28,7 +31,7 @@
 			<!-- /TMPL_LOOP -->
 		<!-- /TMPL_IF -->
 		<table>
-			<tr >
+			<tr>
 				<th><!-- TMPL_VAR name="line" --> / <!-- TMPL_VAR name="column" --></th>
 				<!-- TMPL_LOOP NAME="loopcol" -->
 					<th><!-- TMPL_VAR NAME="coltitle" --></th>
@@ -52,7 +55,7 @@
 						</td>
 					</tr>
 				<!-- /TMPL_LOOP  -->
-				<tr >
+				<tr>
 					<th>TOTAL</th>
 					<!-- TMPL_LOOP NAME="loopfooter" -->
 						<th>
@@ -65,7 +68,7 @@
 	<!-- /TMPL_LOOP -->
 <!-- TMPL_ELSE -->
 	<h1>Patrons statistics</h1>
-	<form method="post">
+	<form method="post" action="/cgi-bin/koha/reports/borrowers_stats.pl">
 	<table>
 		<thead>
 			<tr>
@@ -86,23 +89,23 @@
 			<td>Patron status</td>
 			<td></td>
 			<td></td>
-			<td ><select name="status"><option value=""> </option><option value="debarred">debarred</option><option value="gonenoadress">gone no adress</option><option value="lost">lost</option></td>
+			<td ><select name="status"><option value=""> </option><option value="debarred">debarred</option><option value="gonenoadress">gone no adress</option><option value="lost">lost</option></select></td>
 			</tr>
 			<tr>
 			<td>Patron activity</td>
 			<td></td>
 			<td></td>
-			<td ><select name="activity"><option value=""> </option><option value="active">active</option><option value="nonactive">no active</option></td>
+			<td ><select name="activity"><option value=""> </option><option value="active">active</option><option value="nonactive">no active</option></select></td>
 			</tr>
 
 			<tr class="hilighted">
 			<td>&nbsp;</td>
-			<td colspan="2"><select name="period">
+			<td colspan="2"><select name="period" id="period">
 			<option value ="1">1</option>
 			<option value ="2">2</option>
 			<option value ="3">3</option>
 			</select>
-			years of activity 
+			<label for="period">years of activity</label> 
 			</td>
 			<td>&nbsp;</td>
 			</tr>
@@ -117,7 +120,7 @@
 			</tr>
 			<tr class="hilighted">
 			<td>&nbsp;</td>
-			<td colspan="2"><select name="digits">
+			<td colspan="2"><select name="digits" id="digits">
 			<option value=""> </option>
 			<option value ="1">1</option>
 			<option value ="2">2</option>
@@ -130,7 +133,7 @@
 			<option value ="9">9</option>
 			<option value ="10">10</option>
 			</select>
-			digits 
+			<label for="digits">digits</label> 
 			</td>
 			<td>&nbsp;</td>
 			</tr>
@@ -147,8 +150,8 @@
                 <td>Date of Birth</td>
                 <td></td>
                 <td></td>
-                <td > From <input type="text" readonly="readonly" size="10" id="from" name="Filter" />
-                    <img src="<!-- TMPL_VAR Name="themelang" -->/lib/calendar/cal.gif" border="0" hspace="0" vspace="0" id="openCalendarFrom" style="cursor: pointer;" valign="top">
+                <td > <label for="from">From</label> <input type="text" readonly="readonly" size="10" id="from" name="Filter" />
+                    <img src="<!-- TMPL_VAR Name="themelang" -->/lib/calendar/cal.gif" alt="Show Calendar" border="0" id="openCalendarFrom" style="cursor: pointer;" />
                     <script language="JavaScript" type="text/javascript">
                     function validate1(date) {
                         var day = date.getDate();
@@ -175,8 +178,8 @@
                         }
                     );
                     </script>
-                    To <input readonly="readonly" size="10" id="to" name="Filter" value="" type="text" />
-                        <img src="<!-- TMPL_VAR Name="themelang" -->/lib/calendar/cal.gif" id="openCalendarTo" style="cursor: pointer;" valign="top" border="0" hspace="0" vspace="0">
+                    <label for="to">To</label> <input readonly="readonly" size="10" id="to" name="Filter" value="" type="text" />
+                        <img src="<!-- TMPL_VAR Name="themelang" -->/lib/calendar/cal.gif" alt="Show Calendar" id="openCalendarTo" style="cursor: pointer;" border="0" />
                         <script type="text/javascript">
                             function validate2(date) {
                                 var day = date.getDate();
@@ -228,22 +231,24 @@
 	
 	
 		<h3> Output </h3>
-		<input type="radio" checked name="output" value="screen" /> To screen into the browser
+		<input type="radio" checked="checked" name="output" id="outputscreen" value="screen" /> <label for="outputscreen">To screen into the browser</label>
 		
-		<input type="radio" name="output" value="file"> To file <input type="text" name="basename" value="Export" /> into an application  
+		<input type="radio" name="output" value="file" id="outputfile" /> <label for="outputfile">To file</label> <input type="text" name="basename" value="Export" /> into an application  
 		<!-- TMPL_VAR NAME="CGIextChoice" -->
 		<!-- TMPL_VAR NAME="CGIsepChoice" -->
-	</p>
+	
 	
 	<p>
 	<input type="submit" value="OK" />
 	<input type="hidden" name="report_name" value="<!--TMPL_VAR NAME="report_name" -->" />
-	<input type="hidden" name="do_it" value="1" />
+	<input type="hidden" name="do_it" value="1" /></p>
 	</form>
 <!-- /TMPL_IF -->
-</div>
-</div>
-</div>
 
-<!-- TMPL_INCLUDE NAME="mainmenu.inc" -->
+</div>
+</div>
+<div class="yui-b">
+<!-- TMPL_INCLUDE NAME="reports-menu.inc" -->
+</div>
+</div>
 <!-- TMPL_INCLUDE NAME="intranet-bottom.inc" -->
