--- a/koha-tmpl/intranet-tmpl/prog/en/modules/reports/catalogue_out.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/modules/reports/catalogue_out.tmpl
@@ -1,25 +1,18 @@
 <!-- TMPL_INCLUDE NAME="doc-head-open.inc" -->
-<title>Koha &rsaquo; Reports</title>
+<title>Koha &rsaquo; Reports &rsaquo; Items with no checkouts</title>
 <!-- TMPL_INCLUDE NAME="doc-head-close.inc" -->
-<!-- Additions to enable Calendar system -->
-<link rel="stylesheet" type="text/css" href="<!-- TMPL_VAR name="themelang" -->/lib/calendar/calendar-system.css" />
-<!-- End of additions --><!-- Additions to enable Calendar system -->
-<script type="text/javascript" src="<!-- TMPL_VAR name="themelang" -->/lib/calendar/calendar.js"></script>
-<script type="text/javascript" src="<!-- TMPL_VAR name="themelang" -->/lib/calendar/calendar-en.js"></script>
-<script type="text/javascript" src="<!-- TMPL_VAR name="themelang" -->/lib/calendar/calendar-setup.js"></script>
-<!-- End of additions -->
 </head>
 <body>
 <!-- TMPL_INCLUDE NAME="header.inc" -->
+<!-- TMPL_INCLUDE NAME="cat-search.inc" -->
 
-<!-- TMPL_INCLUDE NAME="menu-reports.inc"-->
-
+<div id="breadcrumbs"><a href="/cgi-bin/koha/mainpage.pl">Home</a> &rsaquo; <a href="/cgi-bin/koha/reports/reports-home.pl">Reports</a> &rsaquo; Items with no checkouts</div>
 
 <div id="doc3" class="yui-t2">
    
    <div id="bd">
 	<div id="yui-main">
-	<div class="yui-b"><div class="yui-g">
+	<div class="yui-b">
 
 <!-- TMPL_IF NAME="do_it" -->
 	<!-- TMPL_LOOP NAME="mainloop" -->
@@ -52,8 +45,8 @@
 		</table>
 	<!-- /TMPL_LOOP -->
 <!-- TMPL_ELSE -->
-	<h1>Items with no Issues</h1>
-	<form method="post">
+	<h1>Items with no checkouts</h1>
+	<form method="post" action="/cgi-bin/koha/reports/catalogue_out.pl">
 	
 	<table>
 		<thead>
@@ -67,7 +60,7 @@
 			<tr>
 				<td>
 					<select name="Limit">
-						<option value ="" checked="checked">None</option>
+						<option value ="" selected="selected">None</option>
 						<option value ="5"> 5</option>
 						<option value ="10">10</option>
 						<option value ="15">15</option>
@@ -80,44 +73,44 @@
 				</td>
 				<td>
 					<select name="Criteria">
-						<option value ="" checked="checked">None</option>
+						<option value ="" selected="selected">None</option>
 						<option value ="homebranch">Branch</option>
 						<option value ="itemtype">Itemtype</option>
 					</select>
 				</td>
+				<td colspan="2">&nbsp;</td>
 			</tr>
 			<tr class="hilighted">
-				<td>&nbsp;</td>
-				<td>&nbsp;</td>
-				<td>Branch</td>
-				<td><input type="text" name="Filter" value="" /></td>
+				<td colspan="2">&nbsp;</td>
+				<td><label for="branchFilter">Branch</label></td>
+				<td><input type="text" id="branchFilter" name="Filter" value="" /></td>
 			</tr>
 			<tr>
-				<td>&nbsp;</td>
-				<td>&nbsp;</td>
-				<td>Document type</td>
-				<td><input type="text" name="Filter" value="" /></td>
+				<td colspan="2">&nbsp;</td>
+				<td><label for="docFilter">Document type</label></td>
+				<td><input type="text" id="docFilter" name="Filter" value="" /></td>
 			</tr>
 		</tbody>
 	</table>
 	
 	
 		<h3> Output </h3>
-		<input type="radio" checked name="output" value="screen" /> To screen into the browser
+		<input type="radio" checked="checked" name="output" id="outputscreen" value="screen" /><label for="outputscreen"> To screen into the browser</label>
 		
-		<input type="radio" name="output" value="file"> To file <input type="text" name="basename" value="Export" /> into an application  
+		<input type="radio" name="output" id="outputfile" value="file" /> <label for="outputfile">To file</label> <input type="text" name="basename" value="Export" /> into an application  
 		<!-- TMPL_VAR NAME="CGIextChoice" -->
 		<!-- TMPL_VAR NAME="CGIsepChoice" -->
 	
-	<input type="submit" value="OK" />
+	<p><input type="submit" value="OK" />
 	<input type="hidden" name="report_name" value="<!--TMPL_VAR NAME="report_name" -->" />
-	<input type="hidden" name="do_it" value="1" />
+	<input type="hidden" name="do_it" value="1" /></p>
 	</form>
 <!-- /TMPL_IF -->
 
 </div>
 </div>
+<div class="yui-b">
+<!-- TMPL_INCLUDE NAME="reports-menu.inc" -->
 </div>
-
-<!-- TMPL_INCLUDE NAME="mainmenu.inc" -->
+</div>
 <!-- TMPL_INCLUDE NAME="intranet-bottom.inc" -->
